Fix footer, header, side menu on mobiles, add overflow hidden to html

--- a/src/assets/sass/_base.sass
+++ b/src/assets/sass/_base.sass
@@ -37,6 +37,7 @@
 
 html
   height: 100%
+  overflow: hidden
 
 body
   position: relative
