--- a/src/components/Advantages/Advantages.sass
+++ b/src/components/Advantages/Advantages.sass
@@ -2,9 +2,10 @@
 
 .how-exercise-plan-works
   &-sect
-    padding-top: 100px
     font-size: 16px
     background-color: $steel-blue
+    .col-12
+      display: flex
     .container
       padding-top: 40px
       padding-bottom: 50px
@@ -27,6 +28,8 @@
 @media (max-width: 768px)
   .how-exercise-plan-works
     &-sect
+      .col-12
+        display: block
       .row
         flex-direction: column
         align-items: center
