--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -67,11 +67,11 @@
     position: fixed
     top: 0
     left: 0
-    right: 0
+    width: 100vw
     background: #ffffff
     z-index: 10
-    height: 100px
-    padding: 35px 0
+    height: 80px
+    padding: 25px 0
     &_logo
       display: none
     &_menuList
