--- a/src/components/MobileFooter/MobileFooter.sass
+++ b/src/components/MobileFooter/MobileFooter.sass
@@ -4,7 +4,7 @@
   position: fixed
   bottom: 0
   left: 0
-  right: 0
+  width: 100vw
   z-index: 10
   background: #FFFFFF
   box-shadow: 0 3px 15px rgba(0, 0, 0, 0.08)
