--- a/src/components/SideMenu/SideMenu.sass
+++ b/src/components/SideMenu/SideMenu.sass
@@ -12,15 +12,15 @@ body
         display: block
     .mainContentWrapper
       transform: translateX(350px)
-    .mobile-auth-btn  
+    .mobile-auth-btn
       display: none
 
 .mobile-side-menu
   position: absolute
-  top: 100px
+  top: 80px
   left: -350px
   width: 350px
-  height: calc(100% - 100px)
+  height: calc(100% - 80px)
   z-index: 999
   padding: 100px 80px
   background-color: $caribbean-green
@@ -40,11 +40,11 @@ body
   &-backdrop
     display: none
     position: fixed
-    top: 100px
+    top: 80px
     left: 0
     right: 0
     width: 100%
-    height: calc(100% - 100px)
+    height: calc(100% - 80px)
     background-color: rgba(0, 0, 0, 0.3)
     cursor: pointer
     z-index: 998
