--- a/src/components/hoc/Layout/Layout.sass
+++ b/src/components/hoc/Layout/Layout.sass
@@ -1,1 +1,8 @@
 .layoutMainWrapper
+  @media (max-width: 767px)
+    padding-bottom: 80px
+  @media (max-width: 992px)
+    padding-top: 80px
+
+.mobile-menu-opened .layoutMainWrapper
+  padding-top: 0
