--- a/src/views/TrainingsView/TrainingsView.sass
+++ b/src/views/TrainingsView/TrainingsView.sass
@@ -3,8 +3,6 @@
 
 .training-plan
   &-card-list
-    &-sect
-      padding-bottom: 120px
     &-col
       flex: 0 0 calc(62% - 70px)
       max-width: calc(62% - 70px)
